--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
         Copyright &copy; 2023 BDevs. All Rights Reserved
       </p>
     </footer>
-    <script src="script.js"></script>
+    <script src="App.js"></script>
   </body>
 </html>
